# josaa-orcr

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: tests.yml
db/2016/: data-2016-1.db  data-2016-2.db  data-2016-3.db  data-2016-4.db  data-2016-5.db  data-2016-6.db
db/2017/: data-2017-1.db  data-2017-2.db  data-2017-3.db  data-2017-4.db  data-2017-5.db  data-2017-6.db  data-2017-7.db
db/2018/: data-2018-1.db  data-2018-2.db  data-2018-3.db  data-2018-4.db  data-2018-5.db  data-2018-6.db  data-2018-7.db
db/2019/: data-2019-1.db  data-2019-2.db  data-2019-3.db  data-2019-4.db  data-2019-5.db  data-2019-6.db  data-2019-7.db
db/2020/: data-2020-1.db  data-2020-2.db  data-2020-3.db  data-2020-4.db  data-2020-5.db  data-2020-6.db
db/2021/: data-2021-1.db  data-2021-2.db  data-2021-3.db  data-2021-4.db  data-2021-5.db  data-2021-6.db
db/2022/: data-2022-1.db  data-2022-2.db  data-2022-3.db  data-2022-4.db  data-2022-5.db  data-2022-6.db
db/2023/: data-2023-1.db  data-2023-2.db  data-2023-3.db  data-2023-4.db  data-2023-5.db  data-2023-6.db
db/2024/: data-2024-1.db  data-2024-2.db  data-2024-3.db  data-2024-4.db  data-2024-5.db
src/: app_state.rs  dataset.rs  lib.rs  main.rs
src/dataset/: dataset.rs  entry.rs  filters.rs  mod.rs  options.rs  schema.rs  sort.rs
src/types/: mod.rs  rank_range.rs
src/widgets/: dropdown.rs  mod.rs  multi_select.rs  range_selector.rs
