[package]
name = "josaa-orcr"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31"
egui_extras = "0.31"
rustc-hash = "2.1"

[dependencies.rusqlite]
version = "0.36"
features = ["bundled"]

[dependencies.eframe]
version = "0.31"
default-features = false
features = ["accesskit", "default_fonts", "glow"]
